:bug: Handle overflow more gracefully

--- a/@navikt/core/css/src/timeline.css
+++ b/@navikt/core/css/src/timeline.css
@@ -35,8 +35,8 @@
   color: var(--ax-text-neutral-subtle);
   white-space: nowrap;
 
-  &:first-of-type,
-  &:last-of-type {
+  .aksel-timeline__axislabels[data-direction="left"] > &:first-of-type,
+  .aksel-timeline__axislabels[data-direction="right"] > &:last-of-type {
     overflow-x: clip;
   }
 }
